--- a/src/style.css
+++ b/src/style.css
@@ -2,16 +2,15 @@
   background-color: #0A0B0F;
 }
 
-
-
 body {
   min-width: 320px;
   min-height: 100vh;
-  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
-
 #app {
-  max-width: 1280px;
-  text-align: center;
+  width: 100%;
+  min-height: 100vh;
+  padding-top: 80px; 
 }
